style: increase workspace top padding to prevent header date overlapping

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 100px 14px 105px 14px; /* margins for header and footer */
+  padding: 130px 14px 105px 14px; /* margins for header and footer */
   transition: width 0.6s cubic-bezier(0.22, 1, 0.36, 1), padding 0.6s cubic-bezier(0.22, 1, 0.36, 1), background-color 0.3s ease;
   position: relative;
   overflow: hidden; /* Prevent text spilling when narrow */
